# kovaclaw

./: .gitignore  Cargo.toml  README.md
bridge/: baileys_bridge.js  package-lock.json  package.json  test_connect.js
bridge/auth_state_new/: app-state-sync-key-AAAAAKA+.json  app-state-sync-key-AAAAAKA1.json  app-state-sync-key-AAAAAKA3.json  app-state-sync-key-AAAAAKA5.json  app-state-sync-key-AAAAAKA6.json  app-state-sync-key-AAAAAKA8.json  app-state-sync-key-AAAAAKAR.json  app-state-sync-key-AAAAAKAT.json  app-state-sync-key-AAAAAKAV.json  app-state-sync-key-AAAAAKAX.json  app-state-sync-key-AAAAAKAZ.json  app-state-sync-key-AAAAAKAb.json  app-state-sync-key-AAAAAKAd.json  app-state-sync-key-AAAAAKAe.json  app-state-sync-key-AAAAAKAg.json  app-state-sync-key-AAAAAKAi.json  app-state-sync-key-AAAAAKAj.json  app-state-sync-key-AAAAAKAk.json  app-state-sync-key-AAAAAKAm.json  app-state-sync-key-AAAAAKAo.json  app-state-sync-key-AAAAAKAq.json  app-state-sync-key-AAAAAKAs.json  app-state-sync-key-AAAAAKAu.json  app-state-sync-key-AAAAAKAw.json  app-state-sync-key-AAAAAKBA.json  app-state-sync-key-AAAAAKBC.json  app-state-sync-key-AAAAAKBE.json  (+842 more)
config/: kovaclaw.json
crates/kova-core/: Cargo.toml
crates/kova-core/src/: agent.rs  claude.rs  config.rs  event.rs  lib.rs  llm.rs  session.rs
crates/kova-core/src/tools/: fs.rs  mod.rs  shell.rs
crates/kova-whatsapp/: Cargo.toml
crates/kova-whatsapp/src/: bridge.rs  main.rs
sessions/: 20260228_143248.jsonl  20260228_143256.jsonl  20260228_143631.jsonl  20260228_143709.jsonl  20260228_144219.jsonl
(+3 files in other folders)
