[package]
name = "kova-whatsapp"
version = "0.1.0"
edition = "2021"

[dependencies]
kova-core = { path = "../kova-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
